--- a/MUSIC/css/styles.css
+++ b/MUSIC/css/styles.css
@@ -5,7 +5,7 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, ul {
+body, header, nav, main, footer, img, h1, ul, section, aside, figure, figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -17,8 +17,47 @@ img {
   display: block;
 }
 
-/*  Style rules for mobile viewport */
+/* Style rule for box sizing applies to all elements */
+* {
+box-sizing: border-box;
+}
 
+.title1 {
+  color: #373684;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
+}
+
+/*  Style rules for mobile viewport */
+@media (max-width: 768px) {
+    aside {
+        text-align: center;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #373684;
+        text-shadow: 3px 3px 10px #8280cb;
+    }
+
+    figure {
+        position: relative;
+        max-width: 275px;
+        margin: 2% auto;
+        border: 8px solid #373684;
+    }
+    figcaption {
+        position: absolute;
+        bottom: 0;
+        background: rgba(55, 54, 132, 0.7);
+        color: #fff;
+        width: 100%;
+        padding: 5% 0;
+        text-align: center;
+        font-family: Verdana, Arial, sans-serif;
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+}
 
 /* Hide tab-desk class */
 .tab-desk {
@@ -56,9 +95,6 @@ nav li a {
   padding: 0.5em 1em;
   text-decoration: none;
 }
-
-
-
 
 /* Style rules for main content */
 main {
@@ -131,49 +167,95 @@ footer a {
 
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 550px), print {
-}
-/* Tablet Viewport: Show tab-desk class, hide mobile class */
-.tab-desk {
-display: block;
-}
-.mobile {
-display: none;
-}
-/* Tablet Viewport: Style rule for header content */
-span.tab-desk {
-display: inline;
-}
-/* Tablet Viewport: Style rules for nav area */
-nav li {
-  border-top: none;
-  display: inline-block;
-  font-size: 1.5em;
-  border-right: 1px solid #e5e9fc;
-}
+  .grid {
+    display: grid;grid-template-columns: 2;
+    grid-gap: 20px;
+  }
 
-nav li:last-child {
-  border-right: none;
-}
+  /* Tablet Viewport: Show tab-desk class, hide mobile class */
+  .tab-desk {
+  display: block;
+  }
+  .mobile {
+  display: none;
+  }
 
-nav li a {
-  padding-top: 0.25em;
-  padding-bottom: 0.25em;
-  padding-left: 0.5em;
-  padding-right: 0.5em;
-}
+  /* Tablet Viewport: Style rule for header content */
+  span.tab-desk {
+  display: inline;
+  }
 
-/* Tablet Viewport: Style rule for map */
-.map {
-  width: 500px;
-  height: 450px;
+  /* Tablet Viewport: Style rules for nav area */
+  nav li {
+    border-top: none;
+    display: inline-block;
+    font-size: 1.5em;
+    border-right: 1px solid #e5e9fc;
+  }
+
+  nav li:last-child {
+    border-right: none;
+  }
+
+  nav li a {
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  /* Tablet Viewport: Style rule for map */
+  .map {
+    width: 500px;
+    height: 450px;
+  }
 }
 
 /* Media Query for Desktop Viewport. */
 @media print, screen and (min-width: 769px) {
+
+  .grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+  }
+
+  figcaption {
+    font-size: 1em;
+  }
+
+  aside {
+      text-align: center;
+      font-size: 0.8em;
+      font-weight: bold;
+      color: #373684;
+      text-shadow: 3px 3px 10px #8280cb;
+  }
+
+  figure {
+      position: relative;
+      max-width: 275px;
+      margin: 2% auto;
+      border: 8px solid #373684;
+  }
+
+  figcaption {
+      position: absolute;
+      bottom: 0;
+      background: rgba(55, 54, 132, 0.7);
+      color: #fff;
+      width: 100%;
+      padding: 5% 0;
+      text-align: center;
+      font-family: Verdana, Arial, sans-serif;
+      font-size: 1.5em;
+      font-weight: bold;
+  }
+
   /* Desktop Viewport: Style rule for header */
   header {
     padding: 2%;
   }
+
   /* Desktop Viewport: Style rules for nav area */
   nav li a {
     padding-top: 0.5em;
@@ -181,17 +263,21 @@ nav li a {
     padding-left: 1.5em;
     padding-right: 1.5em;
   }
+
   nav li a:hover {
     color: #373684;
     background-color: #e5e9fc;
   }
+
   /* Desktop Viewport: Style rules for main content */
   #info ul {
     margin-left: 5%;
   }
+
   main h3 {
     font-size: 1.5em;
   }
+
   #piano, #guitar, #violin {
     width: 29%;
     float: left;
@@ -208,4 +294,8 @@ nav li a {
     background-color: #fff;
     color: #000;
   }
+}
+
+aside {
+  grid-column: 1 / span 2;
 }
