--- a/RESCUE/css/styles.css
+++ b/RESCUE/css/styles.css
@@ -5,7 +5,7 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h3, ul {
+body, header, nav, main, footer, img, h1, h3, ul, aside, figure, figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -86,29 +86,55 @@ main p {
 main h3 {
   padding-top: 2%;
 }
+
 main ul {
   list-style-type: square;
 }
+
 .link {
   color: #4d3319;
   text-decoration: none;
   font-weight: bold;
   font-style: italic;
 }
+
 .action {
   font-size: 1.75em;
   font-weight: bold;
   align-items: center;
 }
+
 .round {
   border-radius: 6px;
 }
+
+aside {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-shadow: 4px 4px 10px #c5a687;
+}
+
+figure {
+  border: 4px solid #2a1f14;
+  box-shadow: 6px 6px 10px #c5a687;
+  max-width: 400px;
+  margin: 2% auto;
+}
+
+figcaption {
+  padding: 2%;
+  border-top: 4px solid #2a1f14;
+}
+
 #info ul {
   margin-left: 10%;
 }
+
 #contact{
   align-items: center;
 }
+
 .tel-link {
   background-color: #2a1f14;
   padding: 2%;
@@ -173,51 +199,82 @@ footer a {
 
 /*  Media Query for Tablet Viewport */
 @media print, screen and (min-width: 620px) {
+
   /* Tablet Viewport: Show tab-desk class, hide mobile class */
   .tab-desk {
     display: block;
   }
+
   .mobile {
     display: none;
   }
+
   /* Tablet Viewport: Style rules for nav area */
   nav li {
     border-top: none;
     display: inline-block;
     font-size: 1.25em;
   }
+
   nav li a {
     padding: 0.5em;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 10px;
+  }
+
+  aside {
+    grid-column: 1 / span 2;
   }
 }
 
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1000px) {
+
   /* Desktop Viewport: Style rules for nav area */
   nav li {
     font-size: 1.5em;
   }
+
   nav li a {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     padding-left: 1.5em;
     padding-right: 1.5em;
   }
+
   nav li a:hover {
     color: #2a1f14;
     background-color: #f6eee4;
+    opacity: 0.5;
   }
+
   /* Desktop Viewport: Style rules for main content */
   #info ul {
     margin-left: 5%;
+  }
+
+  .grid {
+    grid-template-columns: auto auto auto;
+    grid-gap: 30px;
+  }
+
+  aside {
+    grid-column: 1 / span 3;
+    font-size: 2em;
   }
 }
 
 /* Media Query for Large Desktop Viewports */
 @media screen and (min-width: 1921px) {
+
   body {
     background: linear-gradient(#f6eee4, #78593a);
   }
+
   #wrapper{
     width: 1920px;
     margin-top: 0;
@@ -225,8 +282,18 @@ footer a {
     margin-left: auto;
     margin-right: auto;
   }
+
   main {
     background-color: #f6eee4;
+  }
+
+  .grid {
+    grid-template-columns: auto auto auto auto;
+  }
+
+  aside {
+    grid-column: 1 / span 4;
+    font-size: 3em;
   }
 }
 
@@ -236,4 +303,12 @@ footer a {
     background-color: #ffffff;
     color: #000000;
   }
+}
+
+.addon {
+  text-align: center;
+  font-size: 2.5em;
+  font-weight: bold;
+  text-shadow: 4px 4px 10px #c5a687;
+  font-family: "Lora", serif;
 }
